fix compiler warnings and errorprone warnings